# pitch-main

pitch-frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
pitch-frontend/src/: types.ts
pitch-frontend/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
pitch-frontend/src/app/dashboard/: page.tsx
pitch-frontend/src/app/decks/new/: page.tsx
pitch-frontend/src/app/login/: page.tsx
pitch-frontend/src/app/register/: page.tsx
pitch-frontend/src/components/: Layout.tsx
pitch-frontend/src/components/layout/: Layout.tsx  auth-layout.tsx  main-layout.tsx
pitch-frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  error.tsx  input.tsx  label.tsx  loading.tsx  progress.tsx  slider.tsx
pitch-frontend/src/hooks/: useWebSocket.ts
pitch-frontend/src/lib/: api.ts  store.ts
pitch-frontend/src/pages/: test.tsx
pitch-frontend/src/styles/: globals.css
pitch-frontend/src/types/: index.ts
pitch-main/: Dockerfile  docker-compose.yml  pitch.db  prometheus.yml  pyproject.toml  run.py
pitch-main/src/: auth.py  config.py  database.py  main.py  models.py  schemas.py  websocket.py
pitch-main/src/pitch/: api.py  cache.py  database.py  message_broker.py  models.py  monitoring.py
pitch-main/src/pitch/tools/: vector_store.py
pitch-main/src/services/: analysis_service.py
